src/main/kotlin/com/example/gymi/global/error/exception/BasicException.kt
package com.example.gymi.global.error.exception

open class BasicException(
    val errorCode: ErrorCode
) : RuntimeException()